Support/text.txt
JavaScript Lint 0.3.0 (JavaScript-C 1.5 2004-09-24)
Developed by Matthias Miller (http://www.JavaScriptLint.com)

footer.js
35	footer.js	/Users/fredrik/Documents/open_source/Awsomelist/Resources/javascripts/footer.js	lint warning: missing semicolon
footer.clean = function (string) {
^

45	footer.js	/Users/fredrik/Documents/open_source/Awsomelist/Resources/javascripts/footer.js	SyntaxError: syntax error
	.
........^


1 error(s), 1 warning(s)
